--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
-  "name": "@casper2020/casper-broker",
+  "name": "@cloudware-casper/casper-broker",
   "description": "Component that allows the interaction with the Broker API",
   "version": "1.9.0",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
   "dependencies": {
     "@polymer/polymer": "^3.0.0"
   }
